实现从activity跳转到指定fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="account_information">账号信息</string>
     <string name="body_information">身材信息</string>
     <string name="setting">设置</string>
+    <string name="modify">修改</string>
 </resources>
