--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_mine">我的</string>
     <string name="title_welcome">Welcome to</string>
     <string name="title_oreo">Oreo造型</string>
-    <string name="input_user_account">用户名</string>
+    <string name="input_user_account">账号</string>
     <string name="input_user_password">密码</string>
     <string name="register">注册</string>
     <string name="login">登录</string>
