--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="login">登录</string>
     <string name="new_Account">新用户</string>
     <string name="nickname">昵称</string>
-    <string name="birthday">生日</string>
+    <string name="age">年龄</string>
     <string name="man">男</string>
     <string name="woman">女</string>
     <string name="confirm_password">再次确认密码</string>
