--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="account_information">账号信息</string>
     <string name="body_information">身材信息</string>
     <string name="setting">设置</string>
-    <string name="modify">修改</string>
+    <string name="modify">确认修改</string>
     <string name="cancel">取消</string>
     <string name="photo_library">从图库选择</string>
     <string name="take_photos">拍照</string>
