ImageProcessor中新增TextProcessor方法

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="photo_library">从图库选择</string>
     <string name="take_photos">拍照</string>
     <string name="log_out">退出账号</string>
+    <string name="my_dressing">我的穿搭</string>
 
 </resources>
